--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 dash = "^2.14.1"
 polars = "^0.19.16"
 pandas = "^2.1.3"
+dash-bootstrap-components = "^1.5.0"
+tqdm = "^4.66.1"
 
 
 [build-system]
