--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ polars = "^0.19.16"
 pandas = "^2.1.3"
 dash-bootstrap-components = "^1.5.0"
 tqdm = "^4.66.1"
+geographiclib = "^2.0"
+pygeodesy = "^23.11.11"
 
 
 [build-system]
