--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ tqdm = "^4.66.1"
 geographiclib = "^2.0"
 pygeodesy = "^23.11.11"
 pyarrow = "^14.0.1"
+dash-uploader = "^0.6.0"
+packaging = "21.3"
 
 
 [build-system]
