--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pygeodesy = "^23.11.11"
 pyarrow = "^14.0.1"
 dash-uploader = "^0.6.0"
 packaging = "21.3"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
