--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pyarrow = "^14.0.1"
 dash-uploader = "^0.6.0"
 packaging = "21.3"
 python-dotenv = "^1.0.0"
+gunicorn = "^21.2.0"
 
 
 [build-system]
