--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dash-uploader = "^0.6.0"
 packaging = "21.3"
 python-dotenv = "^1.0.0"
 gunicorn = "^21.2.0"
+boto3 = "^1.33.10"
 
 
 [build-system]
