--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ packaging = "21.3"
 python-dotenv = "^1.0.0"
 gunicorn = "^21.2.0"
 boto3 = "^1.33.10"
+google-cloud-storage = "^2.16.0"
+google-cloud-bigquery = "^3.21.0"
 
 
 [build-system]
