--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ google-cloud-storage = "^2.16.0"
 google-cloud-bigquery = "^3.21.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.1.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
