--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,13 @@ dash-uploader = "^0.6.0"
 packaging = "21.3"
 python-dotenv = "^1.0.0"
 gunicorn = "^21.2.0"
-boto3 = "^1.33.10"
 google-cloud-storage = "^2.16.0"
 google-cloud-bigquery = "^3.21.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
+functions-framework = "^3.5.0"
 
 [build-system]
 requires = ["poetry-core"]
