--- a/infra/function/requirements.txt
+++ b/infra/function/requirements.txt
@@ -1,2 +1,5 @@
-functions_framework==3.*
-pandas==2.1.*
+functions_framework==3.5.0
+google-cloud-storage==2.16.0
+google-cloud-bigquery==3.21.0
+pandas==2.1.3
+pyarrow==14.0.1
