--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-dotenv = "^1.0.0"
 gunicorn = "^21.2.0"
 google-cloud-storage = "^2.16.0"
 google-cloud-bigquery = "^3.21.0"
+dbt-bigquery = "^1.7.7"
 
 
 [tool.poetry.group.dev.dependencies]
