--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dbt-bigquery = "^1.7.7"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
 functions-framework = "^3.5.0"
+sqlfluff = "^3.0.5"
+sqlfluff-templater-dbt = "^3.0.5"
 
 [build-system]
 requires = ["poetry-core"]
