--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ gunicorn = "^21.2.0"
 google-cloud-storage = "^2.16.0"
 google-cloud-bigquery = "^3.21.0"
 dbt-bigquery = "^1.7.7"
+beautifulsoup4 = "^4.12.3"
 
 
 [tool.poetry.group.dev.dependencies]
