--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ google-cloud-storage = "^2.16.0"
 google-cloud-bigquery = "^3.21.0"
 dbt-bigquery = "^1.7.7"
 beautifulsoup4 = "^4.12.3"
+prefect = "^2.18.1"
 
 
 [tool.poetry.group.dev.dependencies]
